--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ public/uploads/
 nohup.out
 Vagrantfile
 .vagrant
-config/gitlab.yml
+#config/gitlab.yml
 config/database.yml
 config/initializers/omniauth.rb
 config/initializers/rack_attack.rb
