--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,11 @@ nohup.out
 Vagrantfile
 .vagrant
 #config/gitlab.yml
-config/database.yml
+#config/database.yml
 config/initializers/omniauth.rb
-config/initializers/rack_attack.rb
+#config/initializers/rack_attack.rb
 config/initializers/smtp_settings.rb
-config/unicorn.rb
+#config/unicorn.rb
 config/resque.yml
 config/aws.yml
 db/data.yml
